# ModernCPPProgramingTDD

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  dockerfile
.devcontainer/: devcontainer.json
Chapter_02/: CMakeLists.txt
Chapter_02/Version_01/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_02/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_03/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_04/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_05/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_06/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_07/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_08/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_09/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_10/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_11/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_12/: CMakeLists.txt  Soundex.h
Chapter_02/Version_13/: CMakeLists.txt  Soundex.h
Chapter_02/Version_14/: CMakeLists.txt  Soundex.h
Chapter_02/Version_15/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Chapter_02/Version_16/: CMakeLists.txt  Soundex.h
Chapter_02/Version_17/: CMakeLists.txt  Soundex.h
Chapter_02/Version_18/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Chapter_02/Version_19/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Chapter_02/Version_20/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Chapter_02/Version_21/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Chapter_02/Version_22/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_23/: CMakeLists.txt  Soundex.h
Chapter_02/Version_24/: CMakeLists.txt  Soundex.h
Chapter_02/Version_25/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Chapter_02/Version_26/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Chapter_02/Version_27/: CMakeLists.txt
Chapter_02/Version_28/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Chapter_02/Version_29/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_30/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Chapter_02/Version_31/: CMakeLists.txt  Soundex.h
Chapter_02/Version_32/: CMakeLists.txt  SoundexTest.cpp
Chapter_02/Version_33/: CMakeLists.txt  Soundex.h
Chapter_02/Version_34/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Chapter_02/Version_35/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Chapter_02/Version_36/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Chapter_02/Version_37/: CMakeLists.txt  Soundex.h
Chapter_02/Version_38/: CMakeLists.txt  Soundex.h
Chapter_02/Version_39/: CMakeLists.txt  Soundex.h  SoundexTest.cpp
Chapter_02/Version_40/: CMakeLists.txt  main.cpp
Chapter_02/Version_40/src/: CharUtil.cpp  CharUtil.h  Soundex.cpp  Soundex.h  StringUtil.cpp  StringUtil.h
Chapter_02/Version_40/tests/: CharUtilTest.cpp  StringUtilTest.cpp
Chapter_03/: CMakeLists.txt
Chapter_03/Version_01/: CMakeLists.txt  RetweetCollectionTest.cpp
Chapter_03/Version_02/: CMakeLists.txt  RetweetCollection.h  RetweetCollectionTest.cpp
Chapter_03/Version_03/: CMakeLists.txt  RetweetCollectionTest.cpp
Chapter_03/Version_04/: CMakeLists.txt  RetweetCollection.h  RetweetCollectionTest.cpp
Chapter_03/Version_05/: CMakeLists.txt  RetweetCollection.h
Chapter_03/Version_06/: RetweetCollection.h
Chapter_03/Version_07/: RetweetCollectionTest.cpp
Chapter_03/Version_08/: RetweetCollectionTest.cpp  Tweet.h
Chapter_03/Version_09/: CMakeLists.txt
Chapter_03/Version_10/: RetweetCollectionTest.cpp
Chapter_03/Version_11/: CMakeLists.txt
Chapter_04/: CMakeLists.txt
Chapter_04/Version_12/: Tweet.h
Chapter_04/Version_13/: RetweetCollectionTest.cpp  Tweet.h
Chapter_04/Version_14/: RetweetCollectionTest.cpp
Chapter_04/Version_15/: RetweetCollectionTest.cpp
Chapter_04/Version_16/: RetweetCollection.h  RetweetCollectionTest.cpp
Chapter_04/Version_17/: RetweetCollectionTest.cpp
Chapter_04/Version_18/: ParameterizedTest.cpp  RetweetCollectionTest.cpp
Chapter_05/: CMakeLists.txt
Chapter_05/Version_01/: CMakeLists.txt  PlaceDescriptionServiceTest.cpp
Chapter_05/Version_02/: AddressExtractor.cpp  AddressExtractor.h  PlaceDescriptionService.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
Chapter_05/Version_03/: PlaceDescriptionService.cpp  PlaceDescriptionServiceTest.cpp
Chapter_05/Version_04/: PlaceDescriptionServiceTest.cpp
Chapter_05/Version_05/: PlaceDescriptionService.cpp  PlaceDescriptionServiceTest.cpp
Chapter_05/Version_06/: PlaceDescriptionServiceTest.cpp
Chapter_05/Version_07/: CMakeLists.txt  PlaceDescriptionService.cpp  PlaceDescriptionServiceTest.cpp
Chapter_05/Version_08/: PlaceDescriptionService.cpp  PlaceDescriptionServiceTest.cpp
Chapter_05/Version_09/: PlaceDescriptionService.cpp  PlaceDescriptionServiceTest.cpp
Chapter_05/Version_10/: PlaceDescriptionService.cpp
Chapter_05/Version_11/: AddressExtractor.cpp  PlaceDescriptionService.cpp  PlaceDescriptionServiceTest.cpp
Chapter_05/Version_12/: PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
Chapter_05/Version_13/: CMakeLists.txt  PlaceDescriptionService.cpp  PlaceDescriptionServiceTest.cpp
Chapter_05/Version_15/: CMakeLists.txt  CurlHttp.cpp  PlaceDescriptionService.cpp  PlaceDescriptionService.h
Chapter_05/Version_16/: PlaceDescriptionService.cpp
Chapter_05/Version_17/: AddressExtractorTest.cpp  PlaceDescriptionService.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
Chapter_05/Version_18/: AddressExtractor.h  CMakeLists.txt  Http.h  HttpFactory.cpp  OutParameterTest.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
Chapter_05/Version_19/: CMakeLists.txt  CurlHttp.cpp  CurlHttp.h  HttpFactory.h  PlaceDescriptionService.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
Chapter_6/: CMakeLists.txt
Chapter_6/Version_01/: Portfolio.cpp  Portfolio.h  PortfolioTest.cpp
Chapter_6/Version_02/: CMakeLists.txt  Portfolio.cpp  Portfolio.h  PortfolioTest.cpp
Chapter_6/Version_03/: Portfolio.cpp  Portfolio.h  PortfolioTest.cpp
Chapter_6/Version_04/: Portfolio.cpp  Portfolio.h  PortfolioTest.cpp
(+40 files in other folders)
